# mecab-jmdict-entries

./: LICENSE  MecabEntry.hs  MecabJmDict.hs  mecab-jmdict.cabal  shell.nix
