name:                mecab-jmdict
version:             0.1.0.0
synopsis:            Mecab entries from JMDict
license:             MIT
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   MecabJmDict

  -- other-modules:       
  default-extensions:    
                       LambdaCase
                     , RankNTypes
                     , OverloadedStrings
                     , NoImplicitPrelude

  build-depends:       base
                     , protolude
                     , data-default
                     , lens
                     , text
                     , containers
                     , jmdict-ast
                     , jmdict-xml-parser
                     , pretty-simple
                     , conduit
                     , xml-conduit
                     , resourcet
                     , mecab
                     , binary
                     , bytestring
                     , hs-nlp-jp-utils
  hs-source-dirs:      src
  default-language:    Haskell2010
